add holiday part3

--- a/src/styles/components/holiday.less
+++ b/src/styles/components/holiday.less
@@ -137,6 +137,26 @@
         }
       }
     }
+    .pl54 {
+      padding-left: 54px;
+      font-size: .8rem;
+    }
+    .register-check {
+      .mint-cell-wrapper {
+        padding: 0;
+      }
+      .mint-checklist-label {
+        margin-left: 54px;
+        font-size: .8rem;
+        .mint-checkbox-core::after {
+          top: 4px;
+          left: 7px;
+        }
+      }
+    }
+    a:hover {
+      color: #657180;
+    }
   }
 }
 
