add holiday part4

--- a/src/styles/components/user.less
+++ b/src/styles/components/user.less
@@ -17,6 +17,7 @@
   }
   .info-item span:last-child {
     color: #808489;
+    padding-left: 10px;
   }
   .info-item-border {
     border-bottom: 1px solid #eef0f4;
