--- a/src/styles/components/holiday.less
+++ b/src/styles/components/holiday.less
@@ -99,6 +99,7 @@
     }
     &-content {
       background-color: #fff;
+      margin-bottom: 1px;
     }
     .mint-cell {
       margin-bottom: -1px;
